; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/fs_enet/extr_mac-fcc.c_setup_data.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/fs_enet/extr_mac-fcc.c_setup_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.fs_enet_private = type { i32, i32, i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@FCC_NAPI_RX_EVENT_MSK = common dso_local global i32 0, align 4
@FCC_RX_EVENT = common dso_local global i32 0, align 4
@FCC_TX_EVENT = common dso_local global i32 0, align 4
@FCC_ERR_EVENT_MSK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*)* @setup_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @setup_data(%struct.net_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.fs_enet_private*, align 8
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  %5 = load %struct.net_device*, %struct.net_device** %3, align 8
  %6 = call %struct.fs_enet_private* @netdev_priv(%struct.net_device* %5)
  store %struct.fs_enet_private* %6, %struct.fs_enet_private** %4, align 8
  %7 = load %struct.fs_enet_private*, %struct.fs_enet_private** %4, align 8
  %8 = call i64 @do_pd_setup(%struct.fs_enet_private* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32, i32* @EINVAL, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %2, align 4
  br label %26

13:                                               ; preds = %1
  %14 = load i32, i32* @FCC_NAPI_RX_EVENT_MSK, align 4
  %15 = load %struct.fs_enet_private*, %struct.fs_enet_private** %4, align 8
  %16 = getelementptr inbounds %struct.fs_enet_private, %struct.fs_enet_private* %15, i32 0, i32 3
  store i32 %14, i32* %16, align 4
  %17 = load i32, i32* @FCC_RX_EVENT, align 4
  %18 = load %struct.fs_enet_private*, %struct.fs_enet_private** %4, align 8
  %19 = getelementptr inbounds %struct.fs_enet_private, %struct.fs_enet_private* %18, i32 0, i32 2
  store i32 %17, i32* %19, align 4
  %20 = load i32, i32* @FCC_TX_EVENT, align 4
  %21 = load %struct.fs_enet_private*, %struct.fs_enet_private** %4, align 8
  %22 = getelementptr inbounds %struct.fs_enet_private, %struct.fs_enet_private* %21, i32 0, i32 1
  store i32 %20, i32* %22, align 4
  %23 = load i32, i32* @FCC_ERR_EVENT_MSK, align 4
  %24 = load %struct.fs_enet_private*, %struct.fs_enet_private** %4, align 8
  %25 = getelementptr inbounds %struct.fs_enet_private, %struct.fs_enet_private* %24, i32 0, i32 0
  store i32 %23, i32* %25, align 4
  store i32 0, i32* %2, align 4
  br label %26

26:                                               ; preds = %13, %10
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local %struct.fs_enet_private* @netdev_priv(%struct.net_device*) #1

declare dso_local i64 @do_pd_setup(%struct.fs_enet_private*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
